--- a/admin.html
+++ b/admin.html
@@ -157,8 +157,8 @@
     const db = getFirestore(app);
 
     // Cloudinary
-    const CLOUD_NAME = "ganti_dengan_cloud_name";
-    const UPLOAD_PRESET = "ganti_dengan_upload_preset";
+    const CLOUD_NAME = "dfojor5pr";
+    const UPLOAD_PRESET = "portal-firebase";
 
     const loginCard=document.getElementById("loginCard");
     const formCard=document.getElementById("formCard");
